Version 2.2.020
    (Codebase) Reworked Roll implementation (See notes)
    (Codebase) Added unit test coverage for Roll
    Fixed a bug where Roll was modifying damage unnecessarily

    NOTES:
    The code for Roll was a bit of a mess, I've rewritten a good chunk of it and added some unit test coverage.
    I will likely put out another update for Acrobatics in general, as the code for Acrobatics is whack.
    This would be a good time to suggest changes to Acrobatics on discord.

Version 2.2.019
    Optimized Alchemy code (thanks MrPowerGamerBR)
    Fixed an exception that could occur when shooting entities through worlds (thanks Wariorrrr)
    Fixes to en_US locale (thanks BlockMasters617)
    Maces, Crossbows, and Tridents skill commands don't warn you that they are work in progress anymore.
    Fixed IllegalArgumentException when Rupture would trigger on an entity with illegal state

    NOTES:
    Maces, Crossbows, and Tridents are still in development, the change to remove the message from the skill command was to reduce the visual noise.

Version 2.2.018
    Fixed a probability bug where certain skills would max out in chance to succeed well before they were supposed to (such as Dodge)
    Blast Mining will no longer drop mob spawners (see notes)
    (Codebase) Added more unit tests for Probability and RNG
    The Herbalism XP gained when breaking certain plants that can grow unnaturally tall vertically (bamboo, kelp) is now capped to the most it could give when naturally grown, this can be disabled in experience.yml
    Added 'ExploitFix.LimitTallPlantFarming' to experience.yml

    NOTES:
    This probability bug was a big oopsie and showed a gap in unit test coverage, I've added that coverage and a bug like this in theory shouldn't happen again.
    In a future version I will add configuration for admins to control what blocks are not allowed to be dropped by blast mining.