@@ -344,13 +344,6 @@ public class PotionConfig extends LegacyConfigLoader {
                 .stream()
                 .filter(potion -> potion.isSimilarPotion(item, itemMeta))
                 .toList();
-        if(potionList.size() > 1) {
-            mcMMO.p.getLogger().severe("Multiple potions defined in config have matched this potion, for mcMMO to behave" +
-                    " properly there should only be one match found.");
-            mcMMO.p.getLogger().severe("Potion ItemStack:" + item.toString());
-            mcMMO.p.getLogger().severe("Alchemy Potions from config matching this item: "
-                    + potionList.stream().map(AlchemyPotion::toString).collect(Collectors.joining(", ")));
-        }
 
         return potionList.isEmpty() ? null : potionList.get(0);
     }
